apps/scriptura/scriptura/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scriptura
  labels:
    app: scriptura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scriptura
  template:
    metadata:
      labels:
        app: scriptura
    spec:
      containers:
        - name: nginx
          image: docker.io/library/nginx:1.31.6-alpine # {"$imagepolicy": "flux-system:nginx"}
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: scriptura-site
              mountPath: /usr/share/nginx/html
              readOnly: true
            - name: scriptura-site
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: scriptura-site
          configMap:
            name: scriptura-site
            items:
              - key: index.html
                path: index.html
              - key: styles.css
                path: styles.css
              - key: privacy-policy.html
                path: privacy-policy/index.html
              - key: support.html
                path: support/index.html
              - key: apple-app-site-association
                path: .well-known/apple-app-site-association
              - key: nginx.conf
                path: nginx.conf
