apps/scriptura/scriptura/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scriptura
spec:
  type: ClusterIP
  selector:
    app: scriptura
  ports:
    - port: 80
      targetPort: http
